# argcv

./: .argcv.env.rc.template  .bazel.rc  .dockerignore  .doxygen.sh  .gitignore  .travis.yml  BUILD  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  WORKSPACE  activate  configure
.github/ISSUE_TEMPLATE/: Bug_report.md
.github/travis/: before_install.sh  deploy.sh  install.sh
argcv/: BUILD  argcv.bzl  argcv.hh
argcv/alg/: alg.hh
argcv/base/: atomic.h  base.h  chan.h  chan_test.cc  code.h  concurrency.cc  concurrency.h  concurrency_test.cc  iter.h  iter_test.cc  macros.h  macros_test.cc  result.h  result_test.cc  signal_slot.h  signal_slot_test.cc  status.cc  status.h  status_test.cc  thread_pool.h  thread_pool_test.cc  types.h  types_test.cc
argcv/c/: BUILD  daemon.h  macros.h
argcv/c/char/: char_helper.c  char_helper.h  char_helper_test.cc
argcv/c/dir/: dir.c  dir.h
argcv/cxx/: BUILD
argcv/cxx/base/: README.md  atomic.h  atomic_test.cc  base.h  code.h  concurrency.cc  concurrency.h  concurrency_test.cc  iter.h  lock.cc  lock.h  macros.h  macros_test.cc  result.h  result_test.cc  signal_slot.h  signal_slot_test.cc  status.cc  status.h  status_test.cc  test.cc  test.h  thread_pool.h  thread_pool_test.cc  types.h  types_test.cc
argcv/cxx/crypto/: BUILD  base.h  crypto.h  crypto_test.cc  md4.h  md5.h  sha1.h  sha224.h  sha256.h  sha384.h  sha512.h
argcv/cxx/encoding/: BUILD
argcv/cxx/env/: BUILD  config.h.template  env.cc  env.h  env_test.cc  macros.h  macros_test.cc  protobuf.h  protobuf_test.cc
argcv/cxx/fs/: BUILD  README.md  fs.cc  fs.h  fs_helper.h  fs_test.cc  path.cc  path.h  path_test.cc  stats.h
argcv/cxx/io/: README.md  base.h  base_test.cc  common.h  common_test.cc  file.h  file_test.cc  io.h  path.cc  path.h  path_test.cc
argcv/cxx/math/: math.h  math_test.cc  rand.h
argcv/cxx/ml/: BUILD
argcv/cxx/net/: README.md
argcv/cxx/os/: README.md  commom.h  common_test.cc  file.h  file_test.cc  os.h  path.cc  path.h  path_test.cc
argcv/cxx/par/: atomic.h  atomic_test.cc  duration.h  duration_test.cc  lock.cc  lock.h  lock_test.cc  oid.h  par.h  signal_slot.h  timer.h  (+8 more)
argcv/io/: base.h  base_test.cc  file.h  file_test.cc  io.h
argcv/ir/: ir.hh
argcv/ml/: aprf.hh  ml.hh  naive_bayes.hh  perceptron.hh
argcv/net/: co_lacus.hh  net.hh
argcv/os/: os.h
argcv/path/: path.cc  path.h  path_test.cc
argcv/proto/: BUILD
argcv/py/: BUILD
argcv/random/: random.hh
argcv/string/: hash.hh  string.hh  uuid.hh
argcv/sync/: README.md  base.cc  base.h  mutex.cc  mutex.h  mutex_test.cc  once.h  once_test.cc  sync.h  wait_group.cc  wait_group.h  wait_group_test.cc
argcv/sys/: daemon.h  signal.h  sys.hh
argcv/test/: BUILD  test.cc  test.h
argcv/thread/: thread.hh
argcv/timer/: timer.hh
argcv/type/: any.hh
cmake/: ExternalCrfpp.cmake  ExternalLeveldb.cmake  ExternalMongoCXX.cmake
doc/: Doxyfile  faq.md
docs/: index.html
docs/html/: _c_h_a_n_g_e_l_o_g_8md.html  _l_i_c_e_n_s_e_8md.html  _r_e_a_d_m_e_8md.html  absl_2main_8cc.html  absl_2main_8cc.js  annotated.html  annotated_dup.js  argcv_2base_2_r_e_a_d_m_e_8md.html  argcv_2cxx_2base_2_r_e_a_d_m_e_8md.html  argcv_2cxx_2io_2_r_e_a_d_m_e_8md.html  argcv_2cxx_2net_2_r_e_a_d_m_e_8md.html  argcv_2cxx_2os_2_r_e_a_d_m_e_8md.html  argcv_2cxx_2path_2_r_e_a_d_m_e_8md.html  argcv_2cxx_2sync_2_r_e_a_d_m_e_8md.html  argcv_2io_2_r_e_a_d_m_e_8md.html  argcv_2net_2_r_e_a_d_m_e_8md.html  argcv_2os_2_r_e_a_d_m_e_8md.html  argcv_2path_2_r_e_a_d_m_e_8md.html  argcv_2sync_2_r_e_a_d_m_e_8md.html  atomic_8h.html  atomic_8h.js  atomic_8h_source.html  base_2base_8h.html  base_2base_8h_source.html  base_8cc.html  base_8h.html  base_8h_source.html  c_2macros_8h.html  c_2macros_8h.js  c_2macros_8h_source.html  chan_8h.html  chan_8h_source.html  class_comparable-members.html  class_comparable.html  class_comparable.js  classargcv_1_1_chan-members.html  classargcv_1_1_chan.html  classargcv_1_1_chan.js  classargcv_1_1_closer-members.html  classargcv_1_1_closer.html  (+306 more)
docs/md/: faq.md
docs/template/: header.html
examples/: BUILD
examples/absl/: BUILD  main.cc
examples/cxx/: BUILD
examples/gflags/: BUILD  main.cc
examples/proto/: BUILD
examples/py/: BUILD  bin.py  lib.py  test.py
examples/test/: BUILD  example_bench.cc  example_test.cc  example_test.h
lib/: CMakeLists.txt  argcv.cc
lib/sys/: CMakeLists.txt  daemon.c  signal.c
scripts/: build_docker.sh  cleanup_docker.sh  start_docker.sh
tools/: BUILD  bash_helpers.sh  configure_file.py  version.bzl
tools/build_rules/: BUILD  arq.bzl  cue.bzl  grpc-cc-impl.bzl  grpc-impl.bzl  grpc.bzl
tools/docs/: Doxyfile
(+271 files in other folders)
