SET(ARGCV_SYS_VERSION 1.0)
SET(ARGCV_SYS_SOVERSION 0.1)

ADD_DEFINITIONS( " -D_POSIX_SOURCE ")

AUX_SOURCE_DIRECTORY(. LIBARGCV_SYS_SRC)
ADD_LIBRARY(argcv_sys SHARED ${LIBARGCV_SYS_SRC})
SET_TARGET_PROPERTIES(argcv_sys PROPERTIES VERSION ${ARGCV_SYS_VERSION} SOVERSION ${ARGCV_SYS_SOVERSION})

ADD_LIBRARY(argcv_sys_static STATIC ${LIBARGCV_SYS_SRC})
SET_TARGET_PROPERTIES(argcv_sys_static PROPERTIES OUTPUT_NAME "argcv_sys")

#ADD_DEPENDENCIES(argcv_sys leveldb_proj)
#TARGET_LINK_LIBRARIES(argcv_sys leveldb)

#ADD_DEPENDENCIES(argcv_sys_static leveldb_proj)

#TARGET_LINK_LIBRARIES(argcv_sys_static argcv_util_static)

# INSTALL (TARGETS argcv_util argcv_util_static
#     LIBRARY DESTINATION lib64
#     ARCHIVE DESTINATION lib64)

# INSTALL (FILES ${${CMAKE_PROJECT_NAME}_SOURCE_DIR}/include/argcv/util.h DESTINATION include/argcv/ )



